--- a/Config/Localization/metratech.com/metratech.com_tax_es-MX.xml
+++ b/Config/Localization/metratech.com/metratech.com_tax_es-MX.xml
@@ -1,66 +1,66 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <mt_config>
-  <language_code>us</language_code>
+  <language_code>es-MX</language_code>
   <locale_space name="metratech.com/tax">
     <locale_entry>
       <Name>metratech.com/tax/BillSoftTaxLevel/County</Name>
-      <Value>County</Value>
+      <Value>condado</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/BillSoftTaxLevel/Federal</Name>
-      <Value>Federal</Value>
+      <Value>federal</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/BillSoftTaxLevel/Local</Name>
-      <Value>Local</Value>
+      <Value>local</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/BillSoftTaxLevel/Other</Name>
-      <Value>Other</Value>
+      <Value>otro</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/BillSoftTaxLevel/State</Name>
-      <Value>State</Value>
+      <Value>estado</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxBand/exempt</Name>
-      <Value>Exempt</Value>
+      <Value>exento</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxBand/reduce1</Name>
-      <Value>Reduce1</Value>
+      <Value>[es-MX]Reduce1</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxBand/reduce2</Name>
-      <Value>Reduce2</Value>
+      <Value>[es-MX]Reduce2</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxBand/reduce3</Name>
-      <Value>Reduce3</Value>
+      <Value>[es-MX]Reduce3</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxBand/reduce4</Name>
-      <Value>Reduce4</Value>
+      <Value>[es-MX]Reduce4</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxBand/standard</Name>
-      <Value>Standard</Value>
+      <Value>estándar</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxDetail/Other</Name>
-      <Value>Other</Value>
+      <Value>otro</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxDetail/tax_details</Name>
-      <Value>tax_details</Value>
+      <Value>datos fiscales</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxExemptReason/NotExempt</Name>
-      <Value>NotExempt</Value>
+      <Value>No Exento</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxExemptReason/Other</Name>
-      <Value>Other</Value>
+      <Value>otro</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/tax/TaxVendor/BillSoft</Name>
